tests/snapshots/compiler_error_fixtures/exposing__exposing_unknown_member.snap
---
source: tests/error_fixtures/compiler_error_fixtures_snapshots.rs
---
Fixture: examples/compiler_errors/exposing/exposing_unknown_member.flx
== compile ==
failed (compile)
== diagnostics ==
error[E421]: Unknown Member in Exposing

`nonexistent` is not defined in module `ExposingTarget`.

  examples/compiler_errors/exposing/exposing_unknown_member.flx:5:1
  |
5 | import ExposingTarget exposing (nonexistent)
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Check the public members of `ExposingTarget` or remove `nonexistent` from the exposing list.


error[E004]: Undefined Variable

I can't find a value named `nonexistent`.

  examples/compiler_errors/exposing/exposing_unknown_member.flx:8:11
  |
8 |     print(nonexistent())
  |           ^^^^^^^^^^^

Hint:
  Define it first: let nonexistent = ...;

Found 2 errors.
== stdout ==
<not executed>
